# beaverpy

./: .gitignore  Conv2D.ipynb  Conv2DPyt.ipynb  Conv2DPytTest.ipynb  Conv2DPytTestGroups.ipynb  DepthwiseConv2D.ipynb  MaxPool2D.ipynb  README.md  requirements.txt
.archived/: Conv2D.ipynb  Conv2DPyt.ipynb  Conv2DPytTestGroups.ipynb  DepthwiseConv2D.ipynb
.ipynb_checkpoints/: Conv2D-checkpoint.ipynb  Conv2DPyt-checkpoint.ipynb  Conv2DPytTest-checkpoint.ipynb  Conv2DPytTestGroups-checkpoint.ipynb  DepthwiseConv2D-checkpoint.ipynb  MaxPool2D-checkpoint.ipynb
archived/: Conv2DPytTest.ipynb
lib/: optim.py
lib/cnn/: cnn_models.py  layer_utils.py
lib/mlp/: fully_conn.py  layer_utils.py  train.py
notebooks/: Conv2D.ipynb  CosineSimilarity.ipynb  KLDivLoss.ipynb  Linear.ipynb  MSELoss.ipynb  MaxPool2D.ipynb  ReLU.ipynb  Sigmoid.ipynb  Softmax.ipynb  Untitled.ipynb
notebooks/.ipynb_checkpoints/: CosineSimilarity-checkpoint.ipynb  MSELoss-checkpoint.ipynb  ReLU-checkpoint.ipynb  Sigmoid-checkpoint.ipynb
py_scripts/: .gitignore  setup.cfg  setup.py
py_scripts/src/beaverpy/: KLDivLoss.py
py_scripts/tests/: pytest.ini  run_tests.sh  test_Conv2D.py  test_CosineSimilarity.py  test_KLDivLoss.py  test_Linear.py  test_MSELoss.py  test_MaxPool2D.py  test_ReLU.py  test_Sigmoid.py  test_Softmax.py
