[metadata]
name = <beaverpy>
version = <0.1.0>
author = <Sai Anuroop Kesanapalli>
author_email = <ksanu1998@gmail.com>
description = <An implementation of some PyTorch operators using only NumPy>
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ksanu1998/conv-NumPy
    Bug Tracker = https://github.com/ksanu1998/conv-NumPy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: <MIT License>
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
include-package-data = True

[options.package_data]
<ourprojectname> = py.typed